FEAT: Added others field

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <label for="dateAfter">Date After</label>
         <input type="text" name="dateAfter" id="dateAfter" placeholder="YYYY-MM-DD">
         <br>
+        <label for="others">Others</label>
+        <input type="text" name="others" id="others" placeholder="Others">
+        <br>
 
         <input type="submit" value="Submit">
     </form>
